welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: class Array takes type parameters
def lecture():Array = {
              ^Array1:15: error: class Array takes type parameters
def lecture():Array = {
              ^Array1:19: error: not found: value getColorSol
    c(i) = getColorSol()
           ^Array1:36: error: reassignment to val
  start = cpt
        ^Array1:39: error: not found: value setBrosseCouleur
    setBrosseCouleur(cpt%getMondeHauteur())
    ^Array1:39: error: not found: value cpt
    setBrosseCouleur(cpt%getMondeHauteur())
                     ^Array1:40: error: not found: value cpt
    cpt=cpt+1
    ^